# soapdispenser

./: Cargo.toml  EXAMPLE_config.json  Readme.md  config.json
conversion_maps/: 1113.conversion-map  515.conversion-map
docs/: connection.wsd  history.md  protocol.md
recreations/: map.attributes
recreations/2010_05_15/: 0,0.room  0,1.room  0,2.room  0,3.room  0,4.room  0,5.room  0,6.room  0,7.room  0,8.room  1,0.room  1,1.room  1,2.room  1,3.room  1,4.room  1,5.room  1,6.room  1,7.room  1,8.room  2,0.room  2,1.room  2,2.room  2,3.room  2,4.room  2,5.room  2,6.room  2,7.room  2,8.room  3,0.room  3,1.room  3,2.room  3,3.room  3,4.room  3,5.room  3,6.room  4,0.room  4,1.room  4,2.room  4,3.room  4,4.room  4,5.room  (+10 more)
recreations/2010_11_13/: 0,0.room  0,1.room  0,2.room  0,3.room  0,4.room  0,5.room  0,6.room  0,7.room  1,0.room  1,1.room  1,2.room  1,3.room  1,4.room  1,5.room  1,6.room  1,7.room  2,0.room  2,1.room  2,2.room  2,3.room  2,4.room  2,5.room  2,6.room  2,7.room  3,0.room  3,1.room  3,2.room  3,3.room  3,4.room  3,5.room  3,6.room  3,7.room  4,0.room  4,1.room  4,2.room  4,3.room  4,4.room  4,5.room  4,6.room  4,7.room  (+10 more)
src/: legacy_map_conversion.rs  main.rs  server.rs  soaprun.rs
src/server/: clients.rs  config.rs  entities.rs  position_extensions.rs  rooms.rs  stream.rs
src/soaprun/: map_attributes.rs  packets.rs  position.rs  rooms.rs  soaprunners.rs  units.rs
