[package]
name = "soapdispenser"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
clap = {version = "4.5.4", features = ["derive"] }
constcat = "0.5.0"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
glob = "0.3.1"
lazy_static = "1.4.0"
no_deadlocks = "1.3.2"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
